GetProjectsByAdminIdServlet работает с асинхронным контекстом: остается только GetProjectByUserIdServlet